# revelation

./: .gitignore  Makefile  README.md  Revelation.hs  Setup.hs  revelation.cabal  setup.sh
Revelation/: Color.hs  Core.hs  Main.hs  Mat.hs  Point.hs  Rect.hs  UI.hs  Utils.hs  Video.hs
Revelation/Bindings/: CppTypes.hsc  Mat.hsc  RawConsts.hsc  RawFuncs.hsc  RawTypes.hsc  Types.hsc  Utils.hs
cbits/: genc.py  genhsc.py  hdr_parser.py  mat.cpp  mat.hpp  opencv_generated.cpp  opencv_generated.hpp  test.cpp  test.hpp  types.cpp  types.hpp
doc/html/revelation/: Revelation.html  doc-index.html  index-frames.html  index.html  mini_Revelation.html  revelation.haddock
examples/: CaptureFromFile.hs
