
name:                       revelation
version:                    0.1.0.0
synopsis:                   OpenCV bindings that provide complete access to OpenCV >= 2.0
license:                    BSD3
license-file:               LICENSE
author:                     Arjun Comar
maintainer:                 nrujac@gmail.com
category:                   AI, Graphics, Machine Vision
build-type:                 Custom
cabal-version:              >=1.10

library
    include-dirs:           cbits/
    includes:               cbits/opencv_generated.hpp
                          , cbits/cpptypes.hpp
                          , cbits/mat.hpp
    c-sources:              cbits/opencv_generated.cpp
                          , cbits/cpptypes.cpp
                          , cbits/mat.cpp
    cc-options:             -fpermissive
    ghc-options:            -pgml g++
    other-modules:          Revelation.Bindings.RawTypes
                          , Revelation.Bindings.RawConsts
                          , Revelation.Bindings.RawFuncs
                          , Revelation.Bindings.CppTypes
                          , Revelation.Bindings.Mat
    exposed-modules:        Revelation.Video
                          , Revelation.Mat
                          , Revelation.UI
                          , Revelation.Color
    pkgconfig-depends:      opencv
    build-depends:          base >=4.6 && <4.7
                          , bindings-DSL >= 1.0.14 && <= 1.1
                          , Cabal >=1.16
                          , vector >= 0.10
                          , pipes >= 4.0
    default-language:       Haskell2010


executable Test
    main-is:                Main.hs
    pkgconfig-depends:      opencv
    ghc-options:            -pgml g++
    build-depends:          base >=4.6 && <4.7
                          , pipes >= 4.0
                          , revelation >= 0.1.0.0
    default-language:       Haskell2010
    hs-source-dirs:         Revelation/
