name:                       revelation
version:                    0.1.0.0
synopsis:                   OpenCV bindings that provide complete access to OpenCV >= 2.0
homepage:                   www.github.com/arjuncomar/revelation.git
license:                    BSD3
license-file:               LICENSE
author:                     Arjun Comar
maintainer:                 nrujac@gmail.com
category:                   AI, Graphics, Machine Vision
build-type:                 Simple
cabal-version:              >=1.10

source-repository head
    type: git
    location: git://github.com/arjuncomar/revelation.git

library
    exposed-modules:        Revelation
    other-modules:          Revelation.Video
                          , Revelation.Mat
                          , Revelation.UI
                          , Revelation.Color
                          , Revelation.Core
                          , Revelation.Utils
    ghc-options:            -pgml g++ -O2
    build-depends:          base >=4.6 && <4.7
                          , Cabal >=1.16
                          , vector >= 0.10
                          , pipes >= 4.0
                          , transformers >= 0.2
                          , opencv-raw >= 0.1
                          , ghc-prim
                          , singletons
                          , tagged
                          , linear
    default-language:       Haskell2010
    default-extensions:     DataKinds
                          , KindSignatures


executable Test
    main-is:                Main.hs
    pkgconfig-depends:      opencv
    ghc-options:            -pgml g++ -O2
    build-depends:          base >=4.6 && <4.7
                          , pipes >= 4.0
                          , revelation >= 0.1.0.0
                          , linear
    default-language:       Haskell2010
    hs-source-dirs:         Revelation/
