name:                       revelation
version:                    0.1.0.0
synopsis:                   Haskell OpenCV Library
homepage:                   www.github.com/arjuncomar/revelation.git
license:                    BSD3
license-file:               LICENSE
author:                     Arjun Comar
maintainer:                 nrujac@gmail.com
category:                   AI, Graphics, Machine Vision
build-type:                 Simple
cabal-version:              >=1.10

source-repository head
    type: git
    location: git://github.com/arjuncomar/revelation.git

library
    exposed-modules:        Revelation
    other-modules:          Revelation.Mat
                          , Revelation.UI
                          , Revelation.Color
                          , Revelation.Core
                          , Revelation.Utils
                          , Revelation.Video
                          , Revelation.Point
    ghc-options:            -O2 -pgml g++ "-optl-Wl,--whole-archive" "-optl-Wl,-Bstatic" "-optl-Wl,-lopencv_c" "-optl-Wl,-Bdynamic" "-optl-Wl,--no-whole-archive"
    build-depends:          base >=4.6 && <5.0
                          , Cabal >=1.16
                          , vector >= 0.10
                          , pipes >= 4.0 
                          , transformers >= 0.2
                          , opencv >= 3.0.0 && < 3.1
                          , linear >= 1.4
                          , lens >= 4.0
                          , cpp-interop >= 0.1
    default-language:       Haskell2010
    default-extensions:     DataKinds
                          , KindSignatures
                          , ScopedTypeVariables

executable Test
    main-is:                Main.hs
    ghc-options:            -O2 -pgml g++ "-optl-Wl,--whole-archive" "-optl-Wl,-Bstatic" "-optl-Wl,-lopencv_c" "-optl-Wl,-Bdynamic" "-optl-Wl,--no-whole-archive"
    pkgconfig-depends:      opencv >= 3.0
    build-depends:          base >=4.6 && <5.0
                          , pipes >= 4.0
                          , revelation >= 0.1.0.0
                          , linear
                          , opencv >= 3.0.0 && < 3.1
    default-language:       Haskell2010
    hs-source-dirs:         Revelation/
